<resources>
    <string name="app_name">Interactive Dices v2</string>
    <string name="hello_adventurer">Hello Adventurer !</string>
    <string name="d20">D20</string>
    <string name="d6">D6</string>
    <string name="d12">D12</string>
    <string name="choose_a_dice_bellow_to_roll_your_luck">Choose a Dice Bellow To Roll Your Luck</string>
    <string name="roll6">Roll</string>
    <string name="Favors">May The Odds Be in Your Favor</string>
    <string name="castluck" />
    <string name="roll12">ROLL</string>
    <string name="roll20">ROLL</string>
</resources>