<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/_1d0315ca5c5c10e5291e23f77d182e5"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="50dp"
        android:text="@string/hello_adventurer"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="60sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.073" />

    <ImageButton
        android:id="@+id/d6"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginStart="1dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/d6"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        app:srcCompat="@drawable/unknown6"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/d12"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/d12"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/d20"
        app:layout_constraintStart_toEndOf="@+id/d6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        app:srcCompat="@drawable/unknown12"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageButton
        android:id="@+id/d20"
        android:layout_width="125dp"
        android:layout_height="115dp"
        android:layout_marginEnd="1dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/d20"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.814"
        app:srcCompat="@drawable/unknown20"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/choose_a_dice_bellow_to_roll_your_luck"
        android:textColor="#FF0000"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greetings" />

</androidx.constraintlayout.widget.ConstraintLayout>